force-app/main/default/objects/Bidder__c/Bidder__c.object-meta.xml
<CustomObject>
    <label>Bieter</label>
    <nameField>
        <label>Bidder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bieter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>