force-app/main/default/objects/Bidder__c/fields/Building_Project__c.field-meta.xml
<CustomField>
    <fullName>Building_Project__c</fullName>
    <label>Building Project</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipName>Bidders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>