force-app/main/default/objects/Bidder__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bidders (Competitor)</relationshipLabel>
    <relationshipName>Bidders1</relationshipName>
    <type>Lookup</type>
</CustomField>