force-app/main/default/objects/Bidder__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Interest unknown</fullName>
                <isActive>false</isActive>
                <label>Interest unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>