force-app/main/default/objects/Bidder__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Put_on_bidder_list</fullName>
                <label>Put on bidder list</label>
            </value>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Opportunity created</fullName>
                <isActive>false</isActive>
                <label>Opportunity created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>