force-app/main/default/objects/Bidder__c/fields/Presented__c.field-meta.xml
<CustomField>
    <fullName>Presented__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Building Project been presented to the partner?</description>
    <label>Presented</label>
    <type>Checkbox</type>
</CustomField>