force-app/main/default/objects/Bidder__c/fields/Reasons_for_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_cancellation__c</fullName>
    <label>Reasons for cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Place of execution</fullName>
            </value>
            <value>
                <fullName>Deadline</fullName>
            </value>
            <value>
                <fullName>Execution period</fullName>
            </value>
            <value>
                <fullName>Project participants</fullName>
            </value>
            <value>
                <fullName>Wrong systems</fullName>
            </value>
            <value>
                <fullName>City/Country</fullName>
                <isActive>false</isActive>
                <label>City/Country</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>