force-app/main/default/objects/Bidder__c/recordTypes/GU_Unternehmer.recordType-meta.xml
<RecordType>
    <fullName>GU_Unternehmer</fullName>
    <active>true</active>
    <label>GU Unternehmer</label>
</RecordType>