force-app/main/default/objects/Bidder__c/recordTypes/Proactive_bidder.recordType-meta.xml
<RecordType>
    <fullName>Proactive_bidder</fullName>
    <active>true</active>
    <label>Proactive bidder</label>
</RecordType>