force-app/main/default/objects/Bidder__c/recordTypes/Raico_bidder.recordType-meta.xml
<RecordType>
    <fullName>Raico_bidder</fullName>
    <active>true</active>
    <label>Raico bidder</label>
</RecordType>