force-app/main/default/objects/Bidder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Building_Project__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Phase__c</columns>
    <columns>Interest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>